cluster-go/infrastructure/llm/deployment-3-8b.yaml

kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
  name: granite-3-8b
  namespace: llm
  labels:
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: granite-3-8b
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
      labels:
        app: granite-3-8b
        deployment: granite-3-8b
    spec:
      containers:
        - name: granite-3-8b
          args:
            - '-s'
          image: quay.io/redhatai/granite-3-8b-instruct:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 8
              memory: 8Gi
            requests:
              memory: 8Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
