cluster-go/infrastructure/llm/deployment-deepsparse-llama.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
  name: deepsparse-llama
  namespace: llm
  labels:
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: deepsparse-llama
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
      labels:
        app: deepsparse-llama
        deployment: deepsparse-llama
    spec:
      containers:
        - name: deepsparse-llama
          image: quay.io/rh_ee_cschmitz/openshift-deepsparse-llama
          ports:
            - containerPort: 5543
              protocol: TCP
          resources:
            limits:
              cpu: 8
              memory: 14Gi
            requests:
              memory: 14Gi
              cpu: 8
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
