cluster-go/infrastructure/llm/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
  name: granite
  namespace: llm
  labels:
spec:
  replicas: 1
  selector:
    matchLabels:
      app: granite
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
      labels:
        app: granite
        deployment: granite
    spec:
      containers:
        - name: granite
          args:
            - '-s'
          image: quay.io/redhatai/granite-3-8b-instruct:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 14
            requests:
              cpu: 0.01
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
