cluster-go/infrastructure/llm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pacman
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: granite
    deployment: granite
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
