cluster-go/infrastructure/llm/route-deepsparse.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: deepsparse
  namespace: llm
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: deepsparse
    weight: 100
  wildcardPolicy: None
