cluster-go/infrastructure/llm/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: granite
  namespace: llm
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: granite
    weight: 100
  wildcardPolicy: None
